# biodataset-sentinel

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: release_checklist.md  validation_model.md
examples/: README.md  counts.csv  features.csv  samples.csv
src/biosentinel/: __init__.py  __main__.py  audit.py  checks.py  cli.py  io.py  microtrace.py  models.py  privacy.py  report.py
tests/: test_audit.py  test_cli.py  test_io.py  test_microtrace.py
